--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/HackSocNotts">View on GitHub</a>
 
-          <h1 id="project_title">Hacksocnotts.github.io</h1>
-          <h2 id="project_tagline">HackSoc Notts Github Page</h2>
-          <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-prn2/1118540_779231201_1447823640_q.jpg"/>
-    
-
+          <table border="0">
+            <tr>
+              <td> 
+                  <h1 id="project_title">Hacksocnotts.github.io</h1> 
+                  <h2 id="project_tagline">HackSoc Notts Github Page</h2>      
+              </td>
+              <td>
+                <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-prn2/1118540_779231201_1447823640_q.jpg"/>      
+              </td>
+            </tr>
+          </table>
         </header>
     </div>
 
