--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
-        <header class="inner">
+      <!--  <header class="inner"> -->
           <a id="forkme_banner" href="https://github.com/HackSocNotts">View on GitHub</a>
 
           <table border="0">
@@ -29,7 +29,7 @@
               </td>
             </tr>
           </table>
-        </header>
+        <!--</header>-->
     </div>
 
     <!-- MAIN CONTENT -->
