--- a/index.html
+++ b/index.html
@@ -15,21 +15,11 @@
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
-      <!--  <header class="inner"> -->
+      <header class="inner">
           <a id="forkme_banner" href="https://github.com/HackSocNotts">View on GitHub</a>
-
-          <table border="0">
-            <tr>
-              <td> 
-                  <h1 id="project_title">Hacksocnotts.github.io</h1> 
-                  <h2 id="project_tagline">HackSoc Notts Github Page</h2>      
-              </td>
-              <td>
-                <img height="1px" width="1px" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-prn2/1118540_779231201_1447823640_q.jpg"/>      
-              </td>
-            </tr>
-          </table>
-        <!--</header>-->
+          <h1 id="project_title">Hacksocnotts.github.io</h1> 
+          <h2 id="project_tagline">HackSoc Notts Github Page</h2>      
+        </header>
     </div>
 
     <!-- MAIN CONTENT -->
@@ -37,6 +27,8 @@
       <section id="main_content" class="inner">
         <h3>
 <a name="welcome-to-the-hacksoc-notts-github-page" class="anchor" href="#welcome-to-the-hacksoc-notts-github-page"><span class="octicon octicon-link"></span></a>Welcome to the HackSoc Notts Github Page!</h3>
+
+ <img height="1px" width="1px" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-prn2/1118540_779231201_1447823640_q.jpg"/>      
 
 <p>HackSoc Notts is a student society at the University Of Nottingham. You can find out more about us by visiting <a href="http://www.hacksocnotts.co.uk">our website</a>.</p>
 
