--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h3>
 <a name="welcome-to-the-hacksoc-notts-github-page" class="anchor" href="#welcome-to-the-hacksoc-notts-github-page"><span class="octicon octicon-link"></span></a>Welcome to the HackSoc Notts Github Page!</h3>
 
- <img height="1px" width="1px" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-prn2/1118540_779231201_1447823640_q.jpg"/>      
+ <img src="http://i.imgur.com/HZkGUHJ.png"/>      
 
 <p>HackSoc Notts is a student society at the University Of Nottingham. You can find out more about us by visiting <a href="http://www.hacksocnotts.co.uk">our website</a>.</p>
 
