--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <h2 id="project_tagline">HackSoc Notts Github Page</h2>      
         </header>
     </div>
-<img src="http://i.imgur.com/HZkGUHJ.png"/>      
+<img src="http://i.imgur.com/Kg84BHb.png"/>      
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
