--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@ layout: default
 ---
 
 <div class="home">
-  {% if site.theme.header_text %}
+  {% if site.theme_specific.header_text %}
   <div class="call-out"
-  style="background-image: url('{{ site.baseurl }}{{ site.theme.header_text_feature_image }}')">
-    {{ site.theme.header_text }}
+  style="background-image: url('{{ site.baseurl }}{{ site.theme_specific.header_text_feature_image }}')">
+    {{ site.theme_specific.header_text }}
   </div>
   {% endif %}
 
@@ -26,7 +26,7 @@ layout: default
       <div class="excerpt">
         {{ post.excerpt }}
         <a class="button" href="{{ post.url | remove_first: '/' | prepend: site.baseurl }}">
-          {{ site.theme.str_continue_reading }}
+          {{ site.theme_specific.str_continue_reading }}
         </a>
       </div>
     </div>
@@ -38,12 +38,12 @@ layout: default
     {% if paginator.previous_page %}
     <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="button" >
       <i class="fa fa-chevron-left"></i>
-      {{ site.theme.str_prev }}
+      {{ site.theme_specific.str_prev }}
     </a>
     {% endif %}
     {% if paginator.next_page %}
     <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="button" >
-      {{ site.theme.str_next }}
+      {{ site.theme_specific.str_next }}
       <i class="fa fa-chevron-right"></i>
     </a>
     {% endif %}
