--- a/content/newsletters/newsletter-2021-06-29.html
+++ b/content/newsletters/newsletter-2021-06-29.html
@@ -1,6 +1,6 @@
 ---
 author: "HackSoc Committee"
-title: "AGM & Lightning Talks"
+title: "EGM & Lightning Talks"
 date: "2021-04-28"
 tags: []
 categories: []
