--- a/content/newsletters/newsletter-2021-06-29.html
+++ b/content/newsletters/newsletter-2021-06-29.html
@@ -1,7 +1,7 @@
 ---
 author: "HackSoc Committee"
-title: "EGM & Lightning Talks"
-date: "2021-04-28"
+title: "EGM"
+date: "2021-06-29"
 tags: []
 categories: []
 ShowToc: false
