add newsletter backlog

--- a/content/newsletters/newsletter-2021-06-29.html
+++ b/content/newsletters/newsletter-2021-06-29.html
@@ -1,13 +1,13 @@
+
 ---
 author: "HackSoc Committee"
-title: "AGM & Lightning Talks"
-date: "2021-04-28"
+title: "EGM on the 13th of July!"
+date: "2021-06-29"
 tags: []
 categories: []
 ShowToc: false
 TocOpen: false
 ---
-
 <!DOCTYPE html>
 <html>
 
