deploy: 04181b30637136698a7cec0e932f06e7677ab5bf

--- a/committee/index.html
+++ b/committee/index.html
@@ -1,8 +1,127 @@
-<!doctype html><html lang=en-us><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta http-equiv=x-ua-compatible content="IE=edge"><title>Committee</title><meta name=description content="HackSoc Nottingham"><meta name=author content="HackSoc Committee"><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel=stylesheet><link rel=stylesheet href=/css/style.css><link rel=stylesheet href=/css/mobile.css><link rel=stylesheet href=/css/desktop.css><script src=/js/calendar.js></script></head><body onload=loadCalendar()><header><div class=title><a href=https://hacksocnotts.co.uk/><img src=/img/logo.svg height=100px alt=HackSoc></a><h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1></div><nav><a id=join href=https://www.su.nottingham.ac.uk/societies/society/hack/>Join Us!</a>
-<a href=https://hacknotts.com/>HackNotts</a></nav></header><main><article><h1>Committee</h1><div><p>HackSoc is run by a committed and motivated team of students striving to give our members the best experiences possible.</p></div><div id=committee><div class=card><img src=/img/team/PeterTaylor.png class=prof alt="Profile Photo"><h3>President</h3>Peter Taylor<ul class=contact><li><a href=https://pmy.pt3.uk><img src=/img/globe.svg alt=website></a></li><li><a href=https://twitter.com/pmypt3><img src=/img/twitter.svg alt=twitter></a></li><li><a href=mailto:peter.taylor@hacksocnotts.co.uk><img src=/img/mail.svg alt=email></a></li></ul></div><div class=card><img src=/img/team/JamesFrost.jpg class=prof alt="Profile Photo"><h3>General Secretary</h3>James Frost<ul class=contact><li><a href=https://frost.cx><img src=/img/globe.svg alt=website></a></li><li><a href=mailto:james.frost@hacksocnotts.co.uk><img src=/img/mail.svg alt=email></a></li></ul></div><div class=card><img src=/img/team/JacobGarby.png class=prof alt="Profile Photo"><h3>Treasurer</h3>Jacob Garby<ul class=contact><li><a href=http://jacobgarby.co.uk><img src=/img/globe.svg alt=website></a></li><li><a href=mailto:jacob.garby@hacksocnotts.co.uk><img src=/img/mail.svg alt=email></a></li></ul></div><div class=card><img src=/img/team/ZacGarby.png class=prof alt="Profile Photo"><h3>Development Secretary</h3>Zac Garby<ul class=contact><li><a href=https://zacgarby.co.uk><img src=/img/globe.svg alt=website></a></li><li><a href=mailto:zac.garby@hacksocnotts.co.uk><img src=/img/mail.svg alt=email></a></li></ul></div><div class=card><img src class=prof alt="Profile Photo"><h3>Speaker Acquisition Secretary</h3>Liam-Elio Colabuono-McDonagh<ul class=contact><li><a href=mailto:liam-e.c-m@hacksocnotts.co.uk><img src=/img/mail.svg alt=email></a></li></ul></div><div class=card><img src class=prof alt="Profile Photo"><h3>Cyber Security Secretary</h3>Alexander Orgill<ul class=contact><li><a href=mailto:alexander.orgill@hacksocnotts.co.uk><img src=/img/mail.svg alt=email></a></li></ul></div></div>As per the Student Union&rsquo;s regulation, our elections are run by <a href=https://en.wikipedia.org/wiki/Single_transferable_vote>Single Transferrable Vote (STV)</a> at either an AGM or EGM (annual or extraordinary general meeting). The AGM is normally run at the end of summer term, but may be at any time of year. The AGM will be publicised in advance.</article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
+<!doctype html><html lang=en-us>
+<head>
+<meta charset=utf-8>
+<meta name=viewport content="width=device-width,initial-scale=1">
+<meta http-equiv=x-ua-compatible content="IE=edge">
+<title>Committee</title>
+<meta name=description content="HackSoc Nottingham">
+<meta name=author content="HackSoc Committee">
+<link rel=preconnect href=https://fonts.googleapis.com>
+<link rel=preconnect href=https://fonts.gstatic.com crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel=stylesheet>
+<link rel=stylesheet href=/css/style.css>
+<link rel=stylesheet href=/css/mobile.css>
+<link rel=stylesheet href=/css/desktop.css>
+<script src=/js/calendar.js></script>
+</head>
+<body onload=loadCalendar()>
+<header>
+<div class=title>
+<a href=https://hacksocnotts.co.uk/><img src=/img/logo.svg height=100px alt=HackSoc></a>
+<h1><a href=https://hacksocnotts.co.uk/>HackSoc Nottingham</a></h1>
+</div>
+<nav>
+<a id=join href=https://www.su.nottingham.ac.uk/societies/society/hack/>Join Us!</a>
+<a href=https://hacknotts.com/>HackNotts</a>
+</nav>
+</header>
+<main>
+<article>
+<h1>Committee</h1>
+<div>
+<p>HackSoc is run by a committed and motivated team of students striving to give our members the best experiences possible.</p>
+</div>
+<div id=committee>
+<div class=card>
+<img src=/img/team/PeterTaylor.png class=prof alt="Profile Photo">
+<h3>President</h3>
+Peter Taylor
+<ul class=contact>
+<li>
+<a href=https://pmy.pt3.uk><img src=/img/globe.svg alt=website></a>
+</li>
+<li>
+<a href=https://twitter.com/pmypt3><img src=/img/twitter.svg alt=twitter></a>
+</li>
+<li>
+<a href=mailto:peter.taylor@hacksocnotts.co.uk><img src=/img/mail.svg alt=email></a>
+</li>
+</ul>
+</div>
+<div class=card>
+<img src=/img/team/JamesFrost.jpg class=prof alt="Profile Photo">
+<h3>General Secretary</h3>
+James Frost
+<ul class=contact>
+<li>
+<a href=https://frost.cx><img src=/img/globe.svg alt=website></a>
+</li>
+<li>
+<a href=mailto:james.frost@hacksocnotts.co.uk><img src=/img/mail.svg alt=email></a>
+</li>
+</ul>
+</div>
+<div class=card>
+<img src=/img/team/JacobGarby.png class=prof alt="Profile Photo">
+<h3>Treasurer</h3>
+Jacob Garby
+<ul class=contact>
+<li>
+<a href=http://jacobgarby.co.uk><img src=/img/globe.svg alt=website></a>
+</li>
+<li>
+<a href=mailto:jacob.garby@hacksocnotts.co.uk><img src=/img/mail.svg alt=email></a>
+</li>
+</ul>
+</div>
+<div class=card>
+<img src=/img/team/ZacGarby.png class=prof alt="Profile Photo">
+<h3>Development Secretary</h3>
+Zac Garby
+<ul class=contact>
+<li>
+<a href=https://zacgarby.co.uk><img src=/img/globe.svg alt=website></a>
+</li>
+<li>
+<a href=mailto:zac.garby@hacksocnotts.co.uk><img src=/img/mail.svg alt=email></a>
+</li>
+</ul>
+</div>
+<div class=card>
+<img src class=prof alt="Profile Photo">
+<h3>Speaker Acquisition Secretary</h3>
+Liam-Elio Colabuono-McDonagh
+<ul class=contact>
+<li>
+<a href=mailto:liam-e.c-m@hacksocnotts.co.uk><img src=/img/mail.svg alt=email></a>
+</li>
+</ul>
+</div>
+<div class=card>
+<img src class=prof alt="Profile Photo">
+<h3>Cyber Security Secretary</h3>
+Alexander Orgill
+<ul class=contact>
+<li>
+<a href=mailto:alexander.orgill@hacksocnotts.co.uk><img src=/img/mail.svg alt=email></a>
+</li>
+</ul>
+</div>
+</div>
+As per the Student Union&rsquo;s regulation, our elections are run by <a href=https://en.wikipedia.org/wiki/Single_transferable_vote>Single Transferrable Vote (STV)</a> at either an AGM or EGM (annual or extraordinary general meeting). The AGM is normally run at the end of summer term, but may be at any time of year. The AGM will be publicised in advance.
+</article>
+</main>
+<footer>
+<section class=flex>
+<a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
-<a href=/u/constitution.pdf>Constitution</a>
+<a href=https://hacksoc.net/constitution.pdf>Constitution</a>
 <a href=/committee>Committee</a>
-<a href=/code-of-conduct>Code of Conduct</a>
-<a href=/events>All Events</a></section><span>Copyright &copy; 2021 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
+<a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
+<a href=/events>All Events</a>
+</section>
+<span>Copyright &copy; 2021 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
+</footer>
+</body>
+</html>
