--- a/events/index.html
+++ b/events/index.html
@@ -32,7 +32,7 @@
 <article class=item>
 <time class=post-date>13/07/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-egm/>EGM</a>
+<a href=https://hacksocnotts.co.uk/events/events/2021-egm/>EGM</a>
 </article>
 </main>
 <footer>
