deploy: 47d36069a74c3b6a2bbc31bb38eedfee3575fd62

--- a/events/events/2021-egm/index.html
+++ b/events/events/2021-egm/index.html
@@ -60,6 +60,7 @@ We are also looking for people interested in organising HackNotts 2021, our annu
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a>
+<a href=/awesome-talks>Awesome Talks</a>
 </section>
 <span>Copyright &copy; 2021 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
 </footer>
