--- a/awesome-talks/index.html
+++ b/awesome-talks/index.html
@@ -111,6 +111,7 @@ January 1, 0001
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a>
+<a href=/awesome-talks>Awesome Talks</a>
 </section>
 <span>Copyright &copy; 2021 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
 </footer>
