--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ Got an idea that could work with some programming? Come along to share your idea
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a>
+<a href=/awesome-talks>Awesome Talks</a>
 </section>
 <span>Copyright &copy; 2021 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
 </footer>
