--- a/awesome-talks/index.html
+++ b/awesome-talks/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title></title>
+<title>Awesome Talks</title>
 <meta name=description content="HackSoc Nottingham">
 <meta name=author content="HackSoc Committee">
 <link rel=preconnect href=https://fonts.googleapis.com>
@@ -27,9 +27,9 @@
 </header>
 <main>
 <article>
-<h1></h1>
+<h1>Awesome Talks</h1>
 <h3>
-January 1, 0001
+August 15, 2021
 </h3>
 <div>
 <h1 id=awesome-talks-awesomehttpsawesomerebadgesvghttpsawesomere-linthttpsgithubcomhacksocnottsawesome-talksactionsworkflowslintyamlbadgesvghttpsgithubcomhacksocnottsawesome-talksactionsworkflowslintyaml>Awesome Talks <a href=https://awesome.re><img src=https://awesome.re/badge.svg alt=Awesome></a> <a href=https://github.com/HackSocNotts/Awesome-Talks/actions/workflows/lint.yaml><img src=https://github.com/HackSocNotts/Awesome-Talks/actions/workflows/lint.yaml/badge.svg alt=lint></a></h1>
