--- a/newsletters/index.html
+++ b/newsletters/index.html
@@ -1,10 +1,9 @@
 <!doctype html><html lang=en-us>
 <head>
-<meta name=generator content="Hugo 0.87.0">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title>HackSoc</title>
+<title>Newsletters</title>
 <meta name=description content="HackSoc Nottingham">
 <meta name=author content="HackSoc Committee">
 <link rel=preconnect href=https://fonts.googleapis.com>
@@ -14,7 +13,6 @@
 <link rel=stylesheet href=/css/mobile.css>
 <link rel=stylesheet href=/css/desktop.css>
 <script src=/js/calendar.js></script>
-<link rel=alternate type=application/rss+xml href=/index.xml title=HackSoc>
 </head>
 <body onload=loadCalendar()>
 <header>
@@ -28,41 +26,9 @@
 </nav>
 </header>
 <main>
-<div class=calendar-nav>
-<div id=calendar-left onclick=changeMonth(-1)></div>
-<div id=calendar-month onclick=resetMonth()></div>
-<div id=calendar-right onclick=changeMonth(+1)></div>
-</div>
-<table id=calendar>
-<thead>
-<tr>
-<td>Monday</td>
-<td>Tuesday</td>
-<td>Wednesday</td>
-<td>Thursday</td>
-<td>Friday</td>
-<td>Saturday</td>
-<td>Sunday</td>
-</tr>
-</thead>
-<tbody id=calendar-tbody>
-</tbody>
-</table>
-<div class=middle-link>
-<a href=/events/index.ics>Events as ICS (for Outlook &c.)</a>
-</div>
-<div id=split>
-<div class=left>
-<h2>About HackSoc Nottingham</h2>
-<p>A part of the University of Nottingham Students'​ Union, HackSoc is centered around getting its members building, learning, and sharing new tech. Every week we have programming tutorials for complete beginners, advanced topics with guest speakers, and throughout the year we travel to hackathons to team up with other students from around the world.</p>
-<p>HackSoc is run by a committed and motivated <a href=/committee>team of students</a> striving to give our members the best experiences possible.</p>
-</div>
-<div class=right>
 <div>
-<h2>Upcoming Events</h2>
+<h1>Newsletters</h1>
 </div>
-<div>
-<h2><a href=/newsletters>Newsletters</a></h2>
 <article class=item>
 <time class=post-date>29/06/2021</time>
 &mdash;
@@ -78,31 +44,51 @@
 &mdash;
 <a href=https://hacksocnotts.co.uk/newsletters/newsletter-2021-03-30/>Computerphile, Hello World!</a>
 </article>
-<div id=paginator>
-1 of 4
-| <a href=/page/2/>Next</a>
-</div>
-</div>
-</div>
-</div>
-<div>
-<h2>Who can join?</h2>
-HackSoc is open to all. From newbies to seasoned developers, as long as you’re interested in tech, HackSoc is for you.
-<div id=who-can-join>
-<div>
-<h3>Newbies</h3>
-Anyone with little or no knowledge of programming; no experience required!
-</div>
-<div>
-<h3>Developers</h3>
-Improve your skillset, meet other people like you and travel to Hackathons with friends.
-</div>
-<div>
-<h3>Designers</h3>
-Got an idea that could work with some programming? Come along to share your idea, build your idea and get great things made!
-</div>
-</div>
-</div>
+<article class=item>
+<time class=post-date>08/03/2021</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/newsletters/newsletter-2021-03-08/>Discord Bot workshop, 3D printed bionics, and Computerphile talk!</a>
+</article>
+<article class=item>
+<time class=post-date>22/02/2021</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/newsletters/newsletter-2021-02-22/>Packaging for Linux, Diversity Talk, & More!</a>
+</article>
+<article class=item>
+<time class=post-date>01/02/2021</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/newsletters/newsletter-2021-02-01/>Welcome Back: Plain Text Talk & More</a>
+</article>
+<article class=item>
+<time class=post-date>08/12/2020</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/newsletters/newsletter-2020-12-08/>Automotive Cyber Security Talk and Final Fantasy Quirks</a>
+</article>
+<article class=item>
+<time class=post-date>30/11/2020</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/newsletters/newsletter-2020-11-30/>Advent of Code, Final Fantacy Quirks, and Automotive Cyber Security Talk</a>
+</article>
+<article class=item>
+<time class=post-date>27/11/2020</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/newsletters/newsletter-2020-11-27/>Last Chance to get HackNotts Tickets!</a>
+</article>
+<article class=item>
+<time class=post-date>23/11/2020</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/newsletters/newsletter-2020-11-23/>HackNotts is NEXT WEEK!</a>
+</article>
+<article class=item>
+<time class=post-date>13/11/2020</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/newsletters/newsletter-2020-11-13/>HackNotts in TWO WEEKS, Linux Workshop, and IoT Talk.</a>
+</article>
+<article class=item>
+<time class=post-date>02/11/2020</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/newsletters/newsletter-2021-11-02/>Adding to Stack with .NET, Basic Game Development, and HackNotts soon!</a>
+</article>
 </main>
 <footer>
 <section class=flex>
