--- a/search/index.html
+++ b/search/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title>Events</title>
+<title>Search</title>
 <meta name=description content="HackSoc Nottingham">
 <meta name=author content="HackSoc Committee">
 <link rel=preconnect href=https://fonts.googleapis.com>
@@ -26,13 +26,13 @@
 </nav>
 </header>
 <main>
+<article>
+<h1>Search</h1>
+<h3>
+January 1, 0001
+</h3>
 <div>
-<h1>Events</h1>
 </div>
-<article class=item>
-<time class=post-date>13/07/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/events/2021-egm/>EGM</a>
 </article>
 </main>
 <footer>
@@ -44,7 +44,6 @@
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a>
-<a href=/awesome-talks>Awesome Talks</a>
 </section>
 <span>Copyright &copy; 2021 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span>
 </footer>
