--- a/events/2021-egm/index.html
+++ b/events/2021-egm/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title>Events</title>
+<title>EGM</title>
 <meta name=description content="HackSoc Nottingham">
 <meta name=author content="HackSoc Committee">
 <link rel=preconnect href=https://fonts.googleapis.com>
@@ -26,18 +26,29 @@
 </nav>
 </header>
 <main>
+<article>
+<h1>EGM</h1>
+<h3>
+July 13, 2021.
+7-9pm
+</h3>
 <div>
-<h1>Events</h1>
+<p>Nominations for the remaining roles on the committee are now open, so be sure to nominate yourself if interested!
+On Tuesday the 13th of July at 7pm on our Discord we have an Extraordinary General Meeting (EGM) to fill out the roles on our committee. Make sure you come along to vote, and apply for a role if you are interested in contributing!
+If you want to run for committee yourself, please apply at <a href=https://hacksoc.net/nominate>https://hacksoc.net/nominate</a>. You can apply for multiple roles, so don&rsquo;t hold back! The details about the roles are in section 5.3 of our constitution.
+We are also looking for people interested in organising HackNotts 2021, our annual hackathon. If you are interested please apply at <a href=https://hacknotts.com/organise,>https://hacknotts.com/organise,</a> and we will get back to you.</p>
+<p>Here are the available committee positions:</p>
+<ul>
+<li>Vice President</li>
+<li>Welfare and Inclusivity Secretary</li>
+<li>Social Media Secretary*</li>
+<li>Marketing Secretary*</li>
+<li>Graphics Officer</li>
+<li>Industrial Partners Secretary</li>
+<li>If you are interested in running for committee, please apply at <a href=https://hacksoc.net/nominate>https://hacksoc.net/nominate</a></li>
+</ul>
+<p>*If we don&rsquo;t fill both positions, we will put forth a motion to merge the Social Media and Marketing Secretary roles into one, so if you apply, keep in mind that you may end up doing both.</p>
 </div>
-<article class=item>
-<time class=post-date>13/07/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-egm/>EGM</a>
-</article>
-<article class=item>
-<time class=post-date>13/07/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/events/2021-egm/>EGM</a>
 </article>
 </main>
 <footer>
