deploy: a1502109f5fcbd33abe2848050994dc4390f2fca

--- a/events/2021-09-30-programming-cafe/index.html
+++ b/events/2021-09-30-programming-cafe/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title>Events</title>
+<title>September 2021 Programming Cafe</title>
 <meta name=description content="HackSoc Nottingham">
 <meta name=author content="HackSoc Committee">
 <link rel=preconnect href=https://fonts.googleapis.com>
@@ -26,28 +26,19 @@
 </nav>
 </header>
 <main>
+<article>
+<h1>September 2021 Programming Cafe</h1>
+<h3>
+September 30, 2021.
+7-9pm
+</h3>
 <div>
-<h1>Events</h1>
+<h1 id=programming-cafe>Programming Cafe</h1>
+<p>Hello and welcome to our first programming cafe of the year!</p>
+<p>This is a much more laid back event than our workshops and talks, just rock up and work on a project, and speak to other people about their projects!
+We&rsquo;ll be encouraging people to do a brief show and tell towards the end, and may end up spotlit in our newsletter!</p>
+<p>The event will take place in the A32 Ada Lovelace labororty. If you do not have access to the building (eg you are not a CompSci student) let us know when you arrive and we will let you into the building.</p>
 </div>
-<article class=item>
-<time class=post-date>30/09/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-09-30-programming-cafe/>September 2021 Programming Cafe</a>
-</article>
-<article class=item>
-<time class=post-date>28/09/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-welcome-week-up/>2021 Welcome Week event</a>
-</article>
-<article class=item>
-<time class=post-date>23/09/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-welcome-week-ju/>2021 Welcome Week event</a>
-</article>
-<article class=item>
-<time class=post-date>13/07/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-egm/>EGM</a>
 </article>
 </main>
 <footer>
