--- a/events/2021-welcome-week-up/index.html
+++ b/events/2021-welcome-week-up/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title>Events</title>
+<title>2021 Welcome Week event</title>
 <meta name=description content="HackSoc Nottingham">
 <meta name=author content="HackSoc Committee">
 <link rel=preconnect href=https://fonts.googleapis.com>
@@ -26,28 +26,24 @@
 </nav>
 </header>
 <main>
+<article>
+<h1>2021 Welcome Week event</h1>
+<h3>
+September 28, 2021.
+6-8:30pm
+</h3>
 <div>
-<h1>Events</h1>
+<h1 id=welcome-to-hacksoc>Welcome to Hacksoc!</h1>
+<p>To kick off the new academic year, we&rsquo;ve got our try-it introduction event. In this event, we&rsquo;ll have talks on the following:</p>
+<ul>
+<li>Introduction to cyber security</li>
+<li>Asteroids to the Oscilloscope</li>
+<li>Docker and why it should be your friend</li>
+</ul>
+<p>In addition to an overall introduction to the society, and an overview of how you can get involved in the Wider Nottingham Tech Community</p>
+<p>The event will take place in the Keighton Lecture Theatre, just down the hill from the Portland building, but will also be streamed <a href=https://www.youtube.com/channel/UC3cq7pgEjandUq9UHpEHaKw>On our Youtube Channel</a> because we may have to limit the number of people attending due to COVID rules.</p>
+<p>There will be Pizza! 🍕</p>
 </div>
-<article class=item>
-<time class=post-date>30/09/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-09-30-programming-cafe/>September 2021 Programming Cafe</a>
-</article>
-<article class=item>
-<time class=post-date>28/09/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-welcome-week-up/>2021 Welcome Week event</a>
-</article>
-<article class=item>
-<time class=post-date>23/09/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-welcome-week-ju/>2021 Welcome Week event</a>
-</article>
-<article class=item>
-<time class=post-date>13/07/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-egm/>EGM</a>
 </article>
 </main>
 <footer>
