deploy: ed79d52ee5f5e4c2c6ed6bcf8e7b3c04f6c37947

--- a/events/2021-09-30-programming-cafe/index.html
+++ b/events/2021-09-30-programming-cafe/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title>September 2021 Programming Cafe</title>
+<title>Programming Café</title>
 <meta name=description content="HackSoc Nottingham">
 <meta name=author content="HackSoc Committee">
 <link rel=preconnect href=https://fonts.googleapis.com>
@@ -27,17 +27,16 @@
 </header>
 <main>
 <article>
-<h1>September 2021 Programming Cafe</h1>
+<h1>Programming Café</h1>
 <h3>
 September 30, 2021.
 7-9pm
 </h3>
 <div>
-<h1 id=programming-cafe>Programming Cafe</h1>
-<p>Hello and welcome to our first programming cafe of the year!</p>
+<p>Hello and welcome to our first programming café of the year!</p>
 <p>This is a much more laid back event than our workshops and talks, just rock up and work on a project, and speak to other people about their projects!
-We&rsquo;ll be encouraging people to do a brief show and tell towards the end, and may end up spotlit in our newsletter!</p>
-<p>The event will take place in the A32 Ada Lovelace labororty. If you do not have access to the building (eg you are not a CompSci student) let us know when you arrive and we will let you into the building.</p>
+We&rsquo;ll be encouraging people to do a brief show-and-tell towards the end, and you may end up spotlit in our newsletter!</p>
+<p>The event will take place in the A32 Ada Lovelace laboratory. If you do not have access to the building (e.g. you are not a CompSci student) let us know when you arrive and we will let you into the building.</p>
 </div>
 </article>
 </main>
