--- a/events/index.html
+++ b/events/index.html
@@ -32,17 +32,17 @@
 <article class=item>
 <time class=post-date>30/09/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-09-30-programming-cafe/>September 2021 Programming Cafe</a>
+<a href=https://hacksocnotts.co.uk/events/2021-09-30-programming-cafe/>Programming Café</a>
 </article>
 <article class=item>
 <time class=post-date>28/09/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-welcome-week-up/>2021 Welcome Week event</a>
+<a href=https://hacksocnotts.co.uk/events/2021-welcome-week-up/>2021 Welcome Week Event</a>
 </article>
 <article class=item>
 <time class=post-date>23/09/2021</time>
 &mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-welcome-week-ju/>2021 Welcome Week event</a>
+<a href=https://hacksocnotts.co.uk/events/2021-welcome-week-ju/>2021 Welcome Week Event</a>
 </article>
 <article class=item>
 <time class=post-date>13/07/2021</time>
