deploy: 2602f25449312139d41a40622ff568dc7185a7a3

--- a/events/2021-welcome-week-ju/index.html
+++ b/events/2021-welcome-week-ju/index.html
@@ -37,7 +37,7 @@ September 23, 2021.
 <ul>
 <li>Introduction to game development</li>
 <li>JPEG compression</li>
-<li>Toby&rsquo;s talk</li>
+<li>Docker & why it should be your friend</li>
 </ul>
 <p>In addition to an overall introduction to the society, and an overview of how you can get involved in the wider Nottingham tech community.</p>
 <p>The event will take place in the large Business School South lecture theatre on Jubilee Campus, but will also be streamed <a href=https://www.youtube.com/channel/UC3cq7pgEjandUq9UHpEHaKw>on our YouTube channel</a> because we may have to limit the number of people attending due to COVID rules.</p>
