--- a/events/2021-welcome-week-up/index.html
+++ b/events/2021-welcome-week-up/index.html
@@ -37,7 +37,7 @@ September 28, 2021.
 <ul>
 <li>Introduction to cyber security</li>
 <li>Asteroids to the Oscilloscope</li>
-<li>Docker and why it should be your friend</li>
+<li>Coding for an art gallery</li>
 </ul>
 <p>In addition to an overall introduction to the society, and an overview of how you can get involved in the wider Nottingham tech community.</p>
 <p>The event will take place in the Keighton Auditorium, just down the hill from the Portland building, but will also be streamed <a href=https://www.youtube.com/channel/UC3cq7pgEjandUq9UHpEHaKw>on our YouTube channel</a> because we may have to limit the number of people attending due to COVID rules.</p>
