deploy: 3101d34f4aec0f1d393813f3e8cc1c7de99740d7

--- a/events/2021-egm/index.html
+++ b/events/2021-egm/index.html
@@ -26,12 +26,18 @@
 </nav>
 </header>
 <main>
-<article>
+<article class=article-split>
+<div class=article-right>
+<h3>When?</h3>
+<p>7-9pm</p>
+<p>
+July 13, 2021
+</p>
+<h3>Where?</h3>
+<p>Online</p>
+</div>
+<div class=article-left>
 <h1>EGM</h1>
-<h3>
-July 13, 2021.
-7-9pm
-</h3>
 <div>
 <p>Nominations for the remaining roles on the committee are now open, so be sure to nominate yourself if interested!
 On Tuesday the 13th of July at 7pm on our Discord we have an Extraordinary General Meeting (EGM) to fill out the roles on our committee. Make sure you come along to vote, and apply for a role if you are interested in contributing!
@@ -48,6 +54,7 @@ We are also looking for people interested in organising HackNotts 2021, our annu
 <li>If you are interested in running for committee, please apply at <a href=https://hacksoc.net/nominate>https://hacksoc.net/nominate</a></li>
 </ul>
 <p>*If we don&rsquo;t fill both positions, we will put forth a motion to merge the Social Media and Marketing Secretary roles into one, so if you apply, keep in mind that you may end up doing both.</p>
+</div>
 </div>
 </article>
 </main>
