--- a/events/2021-welcome-week-up/index.html
+++ b/events/2021-welcome-week-up/index.html
@@ -26,12 +26,18 @@
 </nav>
 </header>
 <main>
-<article>
+<article class=article-split>
+<div class=article-right>
+<h3>When?</h3>
+<p>6:30-8:30pm</p>
+<p>
+September 28, 2021
+</p>
+<h3>Where?</h3>
+<p>Keighton Auditorium</p>
+</div>
+<div class=article-left>
 <h1>2021 Welcome Week Event</h1>
-<h3>
-September 28, 2021.
-6:30-8:30pm
-</h3>
 <div>
 <p>Welcome to HackSoc! To kick off the new academic year, we&rsquo;ve got our try-it introduction event. In this event, we&rsquo;ll have talks on the following:</p>
 <ul>
@@ -42,6 +48,7 @@ September 28, 2021.
 <p>In addition to an overall introduction to the society, and an overview of how you can get involved in the wider Nottingham tech community.</p>
 <p>The event will take place in the Keighton Auditorium, just down the hill from the Portland building, but will also be streamed <a href=https://www.youtube.com/channel/UC3cq7pgEjandUq9UHpEHaKw>on our YouTube channel</a> because we may have to limit the number of people attending due to COVID rules.</p>
 <p>There will be pizza! 🍕</p>
+</div>
 </div>
 </article>
 </main>
