--- a/newsletters/newsletter-2020-11-13/index.html
+++ b/newsletters/newsletter-2020-11-13/index.html
@@ -27,10 +27,7 @@
 </header>
 <main>
 <article>
-<h1>HackNotts in TWO WEEKS, Linux Workshop, and IoT Talk.</h1>
-<h3>
-November 13, 2020
-</h3>
+<h2>Newsletter: November 13, 2020</h2>
 <div><!doctype html>
 <html>
 <head>
