--- a/newsletters/newsletter-2020-11-27/index.html
+++ b/newsletters/newsletter-2020-11-27/index.html
@@ -27,10 +27,7 @@
 </header>
 <main>
 <article>
-<h1>Last Chance to get HackNotts Tickets!</h1>
-<h3>
-November 27, 2020
-</h3>
+<h2>Newsletter: November 27, 2020</h2>
 <div><!doctype html>
 <html>
 <head>
