--- a/newsletters/newsletter-2020-11-30/index.html
+++ b/newsletters/newsletter-2020-11-30/index.html
@@ -27,10 +27,7 @@
 </header>
 <main>
 <article>
-<h1>Advent of Code, Final Fantacy Quirks, and Automotive Cyber Security Talk</h1>
-<h3>
-November 30, 2020
-</h3>
+<h2>Newsletter: November 30, 2020</h2>
 <div><!doctype html>
 <html>
 <head>
