--- a/newsletters/newsletter-2020-12-08/index.html
+++ b/newsletters/newsletter-2020-12-08/index.html
@@ -27,10 +27,7 @@
 </header>
 <main>
 <article>
-<h1>Automotive Cyber Security Talk and Final Fantasy Quirks</h1>
-<h3>
-December 8, 2020
-</h3>
+<h2>Newsletter: December 8, 2020</h2>
 <div><!doctype html>
 <html>
 <head>
