--- a/newsletters/newsletter-2021-02-22/index.html
+++ b/newsletters/newsletter-2021-02-22/index.html
@@ -27,10 +27,7 @@
 </header>
 <main>
 <article>
-<h1>Packaging for Linux, Diversity Talk, & More!</h1>
-<h3>
-February 22, 2021
-</h3>
+<h2>Newsletter: February 22, 2021</h2>
 <div><!doctype html>
 <html>
 <head>
