--- a/newsletters/newsletter-2021-03-08/index.html
+++ b/newsletters/newsletter-2021-03-08/index.html
@@ -27,10 +27,7 @@
 </header>
 <main>
 <article>
-<h1>Discord Bot workshop, 3D printed bionics, and Computerphile talk!</h1>
-<h3>
-March 8, 2021
-</h3>
+<h2>Newsletter: March 8, 2021</h2>
 <div><!doctype html>
 <html>
 <head>
