--- a/newsletters/newsletter-2021-03-30/index.html
+++ b/newsletters/newsletter-2021-03-30/index.html
@@ -27,10 +27,7 @@
 </header>
 <main>
 <article>
-<h1>Computerphile, Hello World!</h1>
-<h3>
-March 30, 2021
-</h3>
+<h2>Newsletter: March 30, 2021</h2>
 <div><!doctype html>
 <html>
 <head>
