--- a/newsletters/newsletter-2021-04-28/index.html
+++ b/newsletters/newsletter-2021-04-28/index.html
@@ -27,10 +27,7 @@
 </header>
 <main>
 <article>
-<h1>AGM & Lightning Talks</h1>
-<h3>
-April 28, 2021
-</h3>
+<h2>Newsletter: April 28, 2021</h2>
 <div><!doctype html>
 <html>
 <head>
