--- a/newsletters/newsletter-2021-06-29/index.html
+++ b/newsletters/newsletter-2021-06-29/index.html
@@ -27,10 +27,7 @@
 </header>
 <main>
 <article>
-<h1>EGM on the 13th of July!</h1>
-<h3>
-June 29, 2021
-</h3>
+<h2>Newsletter: June 29, 2021</h2>
 <div><!doctype html>
 <html>
 <head>
