--- a/newsletters/newsletter-2021-11-02/index.html
+++ b/newsletters/newsletter-2021-11-02/index.html
@@ -27,10 +27,7 @@
 </header>
 <main>
 <article>
-<h1>Adding to Stack with .NET, Basic Game Development, and HackNotts soon!</h1>
-<h3>
-November 2, 2020
-</h3>
+<h2>Newsletter: November 2, 2020</h2>
 <div><!doctype html>
 <html>
 <head>
