--- a/search/index.html
+++ b/search/index.html
@@ -27,10 +27,7 @@
 </header>
 <main>
 <article>
-<h1>Search</h1>
-<h3>
-January 1, 0001
-</h3>
+<h2>Newsletter: January 1, 0001</h2>
 <div>
 </div>
 </article>
