--- a/events/2021-09-30-programming-cafe/index.html
+++ b/events/2021-09-30-programming-cafe/index.html
@@ -26,17 +26,24 @@
 </nav>
 </header>
 <main>
-<article>
+<article class=article-split>
+<div class=article-right>
+<h3>When?</h3>
+<p>7-9pm</p>
+<p>
+September 30, 2021
+</p>
+<h3>Where?</h3>
+<p>Computer Science A32</p>
+</div>
+<div class=article-left>
 <h1>Programming Café</h1>
-<h3>
-September 30, 2021.
-7-9pm
-</h3>
 <div>
 <p>Hello and welcome to our first programming café of the year!</p>
 <p>This is a much more laid back event than our workshops and talks, just rock up and work on a project, and speak to other people about their projects!
 We&rsquo;ll be encouraging people to do a brief show-and-tell towards the end, and you may end up spotlit in our newsletter!</p>
 <p>The event will take place in the A32 Ada Lovelace laboratory. If you do not have access to the building (e.g. you are not a CompSci student) let us know when you arrive and we will let you into the building.</p>
+</div>
 </div>
 </article>
 </main>
