--- a/newsletters/newsletter-2020-11-23/index.html
+++ b/newsletters/newsletter-2020-11-23/index.html
@@ -27,10 +27,7 @@
 </header>
 <main>
 <article>
-<h1>HackNotts is NEXT WEEK!</h1>
-<h3>
-November 23, 2020
-</h3>
+<h2>Newsletter: November 23, 2020</h2>
 <div><!doctype html>
 <html>
 <head>
