--- a/newsletters/newsletter-2021-02-01/index.html
+++ b/newsletters/newsletter-2021-02-01/index.html
@@ -27,10 +27,7 @@
 </header>
 <main>
 <article>
-<h1>Welcome Back: Plain Text Talk & More</h1>
-<h3>
-February 1, 2021
-</h3>
+<h2>Newsletter: February 1, 2021</h2>
 <div><!doctype html>
 <html>
 <head>
