deploy: 60ef0db507b8701cd60f9171127ea7c081c7c02d

--- a/awesome-talks/index.html
+++ b/awesome-talks/index.html
@@ -91,6 +91,7 @@
 <li><a href=https://youtu.be/fTLsS_QZ8us>https://youtu.be/fTLsS_QZ8us</a> Booting faster (Stewart Smith, LCA 2019)</li>
 <li><a href=https://youtu.be/9-IWMbJXoLM>https://youtu.be/9-IWMbJXoLM</a> What UNIX cost us (Benno Rice, LCA 2020)</li>
 <li><a href=https://youtu.be/mdMqk-FvfIM>https://youtu.be/mdMqk-FvfIM</a> It&rsquo;s (not) down in the noise. (Peter Chubb, LCA 2021)</li>
+<li><a href=https://youtu.be/TPS-eFmdepw>https://youtu.be/TPS-eFmdepw</a> Apps, Algorithms and Abstractions: Decoding our Digital World (Dylan Beattie, NDC 2018)</li>
 </ul>
 <h2 id=contributing>Contributing</h2>
 <p><a href=contributing.md>Contributions of any kind welcome, just follow the guidelines</a>!</p>
