--- a/events/2021-10-28-prog-cafe/index.html
+++ b/events/2021-10-28-prog-cafe/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title>Events</title>
+<title>Programming Café</title>
 <meta name=description content="HackSoc Nottingham">
 <meta name=author content="HackSoc Committee">
 <link rel=preconnect href=https://fonts.googleapis.com>
@@ -26,38 +26,26 @@
 </nav>
 </header>
 <main>
-<div>
-<h1>Events</h1>
+<article class=article-split>
+<div class=article-right>
+<h3>When?</h3>
+<p>7-9pm</p>
+<p>
+October 28, 2021
+</p>
+<h3>Where?</h3>
+<p>Exchange Building C33</p>
 </div>
-<article class=item>
-<time class=post-date>28/10/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-10-28-prog-cafe/>Programming Café</a>
-</article>
-<article class=item>
-<time class=post-date>14/10/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-10-14-prog-cafe/>Programming Café</a>
-</article>
-<article class=item>
-<time class=post-date>30/09/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-09-30-programming-cafe/>Programming Café</a>
-</article>
-<article class=item>
-<time class=post-date>28/09/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-welcome-week-up/>2021 Welcome Week Event</a>
-</article>
-<article class=item>
-<time class=post-date>23/09/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-welcome-week-ju/>2021 Welcome Week Event</a>
-</article>
-<article class=item>
-<time class=post-date>13/07/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-egm/>EGM</a>
+<div class=article-left>
+<h1>Programming Café</h1>
+<div>
+<h1 id=programming-café>Programming Café</h1>
+<p>Hello and welcome to our programming cafe events!</p>
+<p>This is a much more laid back event than our workshops and talks, just rock up and work on a project, and speak to other people about their projects!
+We&rsquo;ll be encouraging people to do a brief show and tell towards the end, and you may end up spotlit in our newsletter!</p>
+<p>The event will take place in the Exchange Building C33 (provisionally, subject to room bookings.)</p>
+</div>
+</div>
 </article>
 </main>
 <footer>
