--- a/events/index.html
+++ b/events/index.html
@@ -40,6 +40,11 @@
 <a href=https://hacksocnotts.co.uk/events/2021-10-14-prog-cafe/>Programming Café</a>
 </article>
 <article class=item>
+<time class=post-date>05/10/2021</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2021-discord-bot-workshop/>Workshop: Discord Bots</a>
+</article>
+<article class=item>
 <time class=post-date>30/09/2021</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2021-09-30-programming-cafe/>Programming Café</a>
