deploy: 3f83db14c6c2b21e26770e945d36c3814ef67711

--- a/events/2021-10-21-docker/index.html
+++ b/events/2021-10-21-docker/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title>Events</title>
+<title>Workshop: Docker</title>
 <meta name=description content="HackSoc Nottingham">
 <meta name=author content="HackSoc Committee">
 <link rel=preconnect href=https://fonts.googleapis.com>
@@ -26,53 +26,24 @@
 </nav>
 </header>
 <main>
-<div>
-<h1>Events</h1>
+<article class=article-split>
+<div class=article-right>
+<h3>When?</h3>
+<p>7-9pm</p>
+<p>
+October 21, 2021
+</p>
+<h3>Where?</h3>
+<p>Exchange C33</p>
 </div>
-<article class=item>
-<time class=post-date>02/11/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-arch-install/>Arch Install Event</a>
-</article>
-<article class=item>
-<time class=post-date>28/10/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-10-28-prog-cafe/>Programming Café</a>
-</article>
-<article class=item>
-<time class=post-date>21/10/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-10-21-docker/>Workshop: Docker</a>
-</article>
-<article class=item>
-<time class=post-date>19/10/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-discord-bot-workshop/>Workshop: Discord Bots</a>
-</article>
-<article class=item>
-<time class=post-date>14/10/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-10-14-prog-cafe/>Programming Café</a>
-</article>
-<article class=item>
-<time class=post-date>30/09/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-09-30-programming-cafe/>Programming Café</a>
-</article>
-<article class=item>
-<time class=post-date>28/09/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-welcome-week-up/>2021 Welcome Week Event</a>
-</article>
-<article class=item>
-<time class=post-date>23/09/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-welcome-week-ju/>2021 Welcome Week Event</a>
-</article>
-<article class=item>
-<time class=post-date>13/07/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-egm/>EGM</a>
+<div class=article-left>
+<h1>Workshop: Docker</h1>
+<div>
+<p>Learn how to use <a href=https://docker.io>Docker</a> with Peter in this workshop.</p>
+<p>This serves as a follow up to his talk from the first introduction event.</p>
+<p>A Linux laptop or virtual machine (Ubuntu or Debian is fine) is highly reccommended to follow along, especially as there are no computers in the room we&rsquo;re using.</p>
+</div>
+</div>
 </article>
 </main>
 <footer>
