--- a/events/2021-arch-install/index.html
+++ b/events/2021-arch-install/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title>Events</title>
+<title>Arch Install Event</title>
 <meta name=description content="HackSoc Nottingham">
 <meta name=author content="HackSoc Committee">
 <link rel=preconnect href=https://fonts.googleapis.com>
@@ -26,53 +26,23 @@
 </nav>
 </header>
 <main>
-<div>
-<h1>Events</h1>
+<article class=article-split>
+<div class=article-right>
+<h3>When?</h3>
+<p>7-9pm</p>
+<p>
+November 2, 2021
+</p>
+<h3>Where?</h3>
+<p>Exchange LT3</p>
 </div>
-<article class=item>
-<time class=post-date>02/11/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-arch-install/>Arch Install Event</a>
-</article>
-<article class=item>
-<time class=post-date>28/10/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-10-28-prog-cafe/>Programming Café</a>
-</article>
-<article class=item>
-<time class=post-date>21/10/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-10-21-docker/>Workshop: Docker</a>
-</article>
-<article class=item>
-<time class=post-date>19/10/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-discord-bot-workshop/>Workshop: Discord Bots</a>
-</article>
-<article class=item>
-<time class=post-date>14/10/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-10-14-prog-cafe/>Programming Café</a>
-</article>
-<article class=item>
-<time class=post-date>30/09/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-09-30-programming-cafe/>Programming Café</a>
-</article>
-<article class=item>
-<time class=post-date>28/09/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-welcome-week-up/>2021 Welcome Week Event</a>
-</article>
-<article class=item>
-<time class=post-date>23/09/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-welcome-week-ju/>2021 Welcome Week Event</a>
-</article>
-<article class=item>
-<time class=post-date>13/07/2021</time>
-&mdash;
-<a href=https://hacksocnotts.co.uk/events/2021-egm/>EGM</a>
+<div class=article-left>
+<h1>Arch Install Event</h1>
+<div>
+<p>Prepare your best heckles, as Jacob and Peter will be installing <a href=https://archlinux.org>Arch Linux</a> live at this event - what could possibly go wrong?</p>
+<p>The event will take place in the Exchange LT3 lecture theatre on Jubilee Campus.</p>
+</div>
+</div>
 </article>
 </main>
 <footer>
