--- a/events/2021-discord-bot-workshop/index.html
+++ b/events/2021-discord-bot-workshop/index.html
@@ -44,7 +44,7 @@ October 12, 2021
 <p>There&rsquo;ll be a quick introduction to the discord.js library, and then you&rsquo;re free to make whatever crazy idea you might have for a bot! We&rsquo;ll be available to help with any problems, so even if you&rsquo;re a total beginner to programming, you should end up with a working bot you can add to your Discord server.</p>
 <p>If you&rsquo;ve looked into Discord bots recently, you&rsquo;ll probably have heard about slash commands taking over. Discord seems to want to let bots only interact via users typing in actual commands, so this will be mostly what we cover, but we&rsquo;ll go over the &ldquo;old way&rdquo; of doing things as well.</p>
 <p>The event will take place in the Exchange Building LT3. If you want to follow along, you&rsquo;ll need to bring a laptop, since you&rsquo;ll need to install some software and we don&rsquo;t have access to the computer science lab at the moment.</p>
-<p>If possible, it would save time to install <a href=https://nodejs.org/en/>node.js</a> (the programming language we&rsquo;ll be using) in advance, as well as the discord.js library. If you&rsquo;re not sure how to do this, feel free to reach out in the discord, or we can help you at the beginning of the workshop.</p>
+<p>If possible, it would save time to install <a href=https://nodejs.org/en/>node.js</a> (the programming language we&rsquo;ll be using) in advance, as well as the discord.js library. If you&rsquo;re not sure how to do this, feel free to reach out in the discord, or we can help you at the beginning of the workshop. Also, it would help if you have a Discord account.</p>
 </div>
 </div>
 </article>
