deploy: 276d2b4d5ccdfe063bafea3aeac850dd89925b80

--- a/events/index.html
+++ b/events/index.html
@@ -45,6 +45,11 @@
 <a href=https://hacksocnotts.co.uk/events/2021-10-21-docker/>Workshop: Docker</a>
 </article>
 <article class=item>
+<time class=post-date>19/10/2021</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2021-linux-intro/>Workshop: Introduction to Linux</a>
+</article>
+<article class=item>
 <time class=post-date>14/10/2021</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2021-10-14-prog-cafe/>Programming Café</a>
