--- a/events/index.html
+++ b/events/index.html
@@ -40,6 +40,11 @@
 <a href=https://hacksocnotts.co.uk/events/2021-10-28-prog-cafe/>Programming Café</a>
 </article>
 <article class=item>
+<time class=post-date>26/10/2021</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2021-10-26/>Building a Raspberry Pi Robot Arm with .NET 5, Blazor and SignalR</a>
+</article>
+<article class=item>
 <time class=post-date>21/10/2021</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2021-10-21-docker/>Workshop: Docker</a>
