--- a/events/2021-linux-intro/index.html
+++ b/events/2021-linux-intro/index.html
@@ -49,7 +49,7 @@ October 19, 2021
 <li>Common gotcha situations.</li>
 <li>How to find help?</li>
 </ul>
-<p>The event will take place in the Exchange Building C33 (provisionally, subject to room bookings.)</p>
+<p>The event will take place in the Exchange Building LT3</p>
 </div>
 </div>
 </article>
