deploy: b0819af3cc05a4f03ba8df7e25031cd74c914b08

--- a/events/index.html
+++ b/events/index.html
@@ -30,6 +30,11 @@
 <h1>Events</h1>
 </div>
 <article class=item>
+<time class=post-date>11/11/2021</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2021-11-11/>What they don't teach you ~at Harvard business school~ in a tech degree.</a>
+</article>
+<article class=item>
 <time class=post-date>02/11/2021</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2021-arch-install/>Arch Install Event</a>
