--- a/events/index.html
+++ b/events/index.html
@@ -35,6 +35,11 @@
 <a href=https://hacksocnotts.co.uk/events/2021-11-11/>What they don't teach you ~at Harvard business school~ in a tech degree.</a>
 </article>
 <article class=item>
+<time class=post-date>09/11/2021</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2021-11-09/>RHLy Old Linux</a>
+</article>
+<article class=item>
 <time class=post-date>02/11/2021</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2021-arch-install/>Arch Install Event</a>
