deploy: b7d8a0a2abc2f26243a72d83cd88246a28ce2d9e

--- a/events/2021-11-09/index.html
+++ b/events/2021-11-09/index.html
@@ -39,7 +39,7 @@ November 9, 2021
 <div class=article-left>
 <h1>RHLy Old Linux</h1>
 <div>
-<p>Peter and James have a play with some old-ass Linux CDs we found</p>
+<p>Peter and James have a play with some old-ass Linux CDs we found.</p>
 </div>
 </div>
 </article>
