deploy: 1d2f068f263a35b8aae18fbf20b2add064e41a4e

--- a/events/2021-11-11/index.html
+++ b/events/2021-11-11/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
-<title>What they don't teach you in a tech degree.</title>
+<title>What they don't teach you in a tech degree</title>
 <meta name=description content="HackSoc Nottingham">
 <meta name=author content="HackSoc Committee">
 <link rel=preconnect href=https://fonts.googleapis.com>
@@ -37,9 +37,9 @@ November 11, 2021
 <p>Exchange LT3</p>
 </div>
 <div class=article-left>
-<h1>What they don't teach you in a tech degree.</h1>
+<h1>What they don't teach you in a tech degree</h1>
 <div>
-<p>Ex Development Secretary Daniel Cordell joins us for a talk: What they don&rsquo;t teach you <del>at Harvard business school</del> in a tech degree.</p>
+<p>Ex-Development Secretary Daniel Cordell joins us for a talk: What they don&rsquo;t teach you <del>at Harvard business school</del> in a tech degree.</p>
 </div>
 </div>
 </article>
