--- a/events/2021-egm/index.html
+++ b/events/2021-egm/index.html
@@ -42,7 +42,7 @@ July 13, 2021
 <p>Nominations for the remaining roles on the committee are now open, so be sure to nominate yourself if interested!
 On Tuesday the 13th of July at 7pm on our Discord we have an Extraordinary General Meeting (EGM) to fill out the roles on our committee. Make sure you come along to vote, and apply for a role if you are interested in contributing!
 If you want to run for committee yourself, please apply at <a href=https://hacksoc.net/nominate>https://hacksoc.net/nominate</a>. You can apply for multiple roles, so don&rsquo;t hold back! The details about the roles are in section 5.3 of our constitution.
-We are also looking for people interested in organising HackNotts 2021, our annual hackathon. If you are interested please apply at <a href=https://hacknotts.com/organise,>https://hacknotts.com/organise,</a> and we will get back to you.</p>
+We are also looking for people interested in organising HackNotts 2021, our annual hackathon. If you are interested please apply at <a href=https://hacknotts.com/organise>https://hacknotts.com/organise</a>, and we will get back to you.</p>
 <p>Here are the available committee positions:</p>
 <ul>
 <li>Vice President</li>
