--- a/events/index.html
+++ b/events/index.html
@@ -30,6 +30,16 @@
 <h1>Events</h1>
 </div>
 <article class=item>
+<time class=post-date>18/11/2021</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2021-11-18-programming-cafe/>Programming Café</a>
+</article>
+<article class=item>
+<time class=post-date>18/11/2021</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2021-11-25-programming-cafe/>Programming Café</a>
+</article>
+<article class=item>
 <time class=post-date>11/11/2021</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2021-11-11/>What they don't teach you in a tech degree</a>
@@ -93,6 +103,11 @@
 <time class=post-date>13/07/2021</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2021-egm/>EGM</a>
+</article>
+<article class=item>
+<time class=post-date>01/01/0001</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2021-12-09-programming-cafe/>Programming Café</a>
 </article>
 </main>
 <footer>
