deploy: 4851e394bc18100306c785b71ead56a8fb31adaf

--- a/events/index.html
+++ b/events/index.html
@@ -40,6 +40,11 @@
 <a href=https://hacksocnotts.co.uk/events/2021-11-18-programming-cafe/>Programming Café</a>
 </article>
 <article class=item>
+<time class=post-date>16/11/2021</time>
+&mdash;
+<a href=https://hacksocnotts.co.uk/events/2021-go-workshop/>Introduction to Go</a>
+</article>
+<article class=item>
 <time class=post-date>11/11/2021</time>
 &mdash;
 <a href=https://hacksocnotts.co.uk/events/2021-11-11/>What they don't teach you in a tech degree</a>
