deploy: b0a56d0460f4d12746eb339b132ff8a6ab1716de

--- a/events/2021-go-workshop/index.html
+++ b/events/2021-go-workshop/index.html
@@ -34,7 +34,7 @@
 November 16, 2021
 </p>
 <h3>Where?</h3>
-<p>LT1</p>
+<p>Exchange C33</p>
 </div>
 <div class=article-left>
 <h1>Introduction to Go</h1>
@@ -42,6 +42,7 @@ November 16, 2021
 <p><a href=https://golang.org>Go</a> is a modern systems programming language designed at Google by a bunch of clever people (including Ken Thompson who create UNIX and B, C&rsquo;s predecessor, so you <em>know</em> it must be good.) It&rsquo;s becoming a very popular language in a lot of spaces, especially on the web and in crypto.</p>
 <p>This talk will introduce you to the basics of the Go programming language including installation, making a project, and the language itself. It&rsquo;s very similar to other C-like languages so if you know any of those then this talk will build on top of that knowledge, but it&rsquo;s by no means a requirement.</p>
 <p>I&rsquo;ll be making a small web server from scratch as a demonstration of the language and the libraries that it comes with, but Go can be used for just about anything, including games, command line applications, GUI software, blockchain software, and almost anything else.</p>
+<p>This event will take place in C33 in the exchange building.</p>
 </div>
 </div>
 </article>
